<resources>
    <string name="app_name">Azur App</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="picture">picture</string>
    <string name="azur_city">Azur City</string>
    <string name="open">Open Today</string>
    <string name="time">from 9:00 to 18:00</string>
    <string name="time_can_change">Hours may change due to the health crisis.</string>
    <string name="check_store_hours"><u>Check store hours.</u></string>
    <string name="under_construction">Section under construction</string>
    <string name="check_later">Make sure to check in later!</string>
    <string name="category">Activité</string>
    <string name="level">Niveau</string>
    <string name="home">Acceuil</string>
    <string name="search">Rechercher</string>
    <string name="favorite">Favoris</string>
    <string name="your_center">Votre Centre</string>
    <string name="stores">Boutiques</string>
    <string name="geant">Géant</string>
    <string name="restaurant">Restaurants</string>
    <string name="leisure">Loisirs</string>
    <string name="services">Services</string>
    <string name="we_hire">Azur Recrute!</string>
    <string name="we_hire_description">Êtes-vous à la recherche d\'une opportunité d\'acquérir de l\'argent et de l\'expérience? Avez-vous suffisamment confiance en vos compétences? Qu\'est-ce que vous attendez!!! Rejoignez notre équipe de travail maintenant!</string>
    <string name="first_name">Nom</string>
    <string name="first_name_hint">Votre nom</string>
    <string name="last_name">Prénom</string>
    <string name="last_name_hint">Votre prénom</string>
    <string name="cin">CIN</string>
    <string name="cin_hint">12345678</string>
    <string name="activity">Activité</string>
    <string name="activity_hint">Marketing, development…</string>
    <string name="embed_cv">Attacher CV</string>
    <string name="submit">Envoyer</string>
    <string name="all">Tout</string>
    <string name="ground_floor">Rez-de-chaussée</string>
    <string name="main_floor">Rez-de-chaussée</string>
    <string name="first_floor">1e Etage</string>
    <string name="second_floor">2e Etage</string>
    <string name="website">Site Web</string>
    <string name="facebook">Facebook</string>
    <string name="activity_shoes">Chaussures</string>
    <string name="activity_ready_to_wear">Prêt-à-porter</string>
    <string name="activity_ready_to_wear_women">Prêt-à-porter Femmes</string>
    <string name="activity_ready_to_wear_men">Prêt-à-porter Hommes</string>
    <string name="activity_ready_to_wear_kids">Prêt-à-porter Enfants</string>
    <string name="activity_cosmetics">Cosmétiques</string>
    <string name="activity_decoration">Décoration</string>
    <string name="activity_sport">Sport</string>
    <string name="activity_perfumery">Parfumerie</string>
    <string name="activity_jewelry">Bijouterie</string>
    <string name="activity_lingerie">Lingerie</string>
    <string name="activity_service">Service</string>
    <string name="activity_optics">Optique</string>
    <string name="activity_furniture">Meubles</string>
    <string name="activity_cafeteria">Caféteria</string>
    <string name="activity_showroom">Showroom</string>
    <string name="activity_linens">Linge de maison</string>
    <string name="activity_restaurant">Restaurant</string>
    <string name="activity_telecom">Télécommunication</string>
    <string name="activity_watchmaking">Horlogerie</string>
    <string name="activity_hypermarket">Hypermarché</string>
    <string name="store_aldo">Aldo</string>
    <string name="store_aldo_fb">https://www.facebook.com/ALDO</string>
    <string name="store_aldo_web">www.aldoshoes.com</string>
    <string name="store_aldo_des">Aldo est la destination mondiale pour les chaussures et accessoires de mode tendance à des prix accessibles. Positif, authentique et débordant de personnalité, Aldo est la marque de style de vie pour les personnes qui s\'engagent dans le monde. ALDO est la première entreprise de chaussures et d\'accessoires de mode au monde à être certifiée climatiquement neutre.</string>
    <string name="store_aldo_phone" />
    <string name="store_sens_inverse">Sens Inverse</string>
    <string name="store_sens_inverse_des">Si vous êtes une cendrillon des temps modernes, venez trouver chaussure à vos pieds chez les magasins SENS INVERSE.</string>
    <string name="store_sens_inverse_phone" />
    <string name="store_sens_inverse_fb">/SensInverseTunisie</string>
    <string name="store_sens_inverse_web">www.sensinverse.com.tn</string>
    <string name="store_maha_modern">Maha Modern</string>
    <string name="store_maha_modern_des">Maha Moden est une marque 100% tunisienne spécialisée dans le prêt à porter féminin. La femme Maha Modern , casual, chic, sport chic ou bien discrète et élégante, attractive et pleine de féminité sans trop en faire. Elle mixe en toute liberté des pièces ultra-tendance indémodables et faciles à porter. Au fil des années maha Moden s\'est dotée d’une culture d\'entreprise basée sur le travail rigoureux, la valorisation du capital humain, et la satisfaction du client.</string>
    <string name="store_maha_modern_phone" />
    <string name="store_maha_modern_fb">/MAHAMODEN.1990/</string>
    <string name="store_maha_modern_web">www.mahamodern.tn</string>
    <string name="store_yves_rocher">Yves Rocher</string>
    <string name="store_yves_rocher_des">Yves Rocher crée le principe de la cosmétique à base de plantes, alliant les propriétés des plantes aux meilleures applications de la science. Grâce à son modèle unique, La marque  récolte ses plantes dans ses propres champs cultivés en agriculture biologique. Parce que respecter les plantes et l’environnement, c’est aussi respecter votre beauté. Yves Rocher garantit la qualité inégalée de ses produits et l\'accès direct de ses consommateurs à ceux-ci.</string>
    <string name="store_yves_rocher_phone" />
    <string name="store_yves_rocher_fb">/YvesRocherTn</string>
    <string name="store_yves_rocher_web">https://www.yvesrocher.tn/</string>
    <string name="store_nine_west">Nine West</string>
    <string name="store_nine_west_des">Nine West une des marques américaines les plus connues qui définit le style féminin intemporel associé aux dernières tendances chaussures et sacs.</string>
    <string name="store_nine_west_phone">70 130 871</string>
    <string name="store_nine_west_fb">/NineWestTunisia</string>
    <string name="store_nine_west_web" />
    <string name="store_pimkie">Pimkie</string>
    <string name="store_pimkie_des">PIMKIE  a toujours aimé la mode et a toujours voulu être proche de ses clientes. Notre cliente aime aussi la mode. Elle aime avoir le choix et sait mixer ses tenues pour construire son style. Vous avez changé. Nous aussi. Vous êtes devenues plus femmes. Vous êtes devenues plus mode. Nos collections sont le reflet de vos envies du moment. Une mode à croquer, toujours au goût du jour et facile à s’offrir. Et comme nous savons que vous aimez être surprises et vous surprendre vous même, nous vous faisons une promesse : « Surprise Me »</string>
    <string name="store_pimkie_phone" />
    <string name="store_pimkie_fb">/Pimkie.Tunisie/</string>
    <string name="store_pimkie_web">www.pimkie.fr</string>
    <string name="store_moda_vinci">Moda Vinci</string>
    <string name="store_moda_vinci_des">Une marque de prêt à porter homme. L’exigence de qualité et le souci du détail sont au cœur de la conception des collections, pour vous garantir un produit juste, élégant et durable</string>
    <string name="store_moda_vinci_phone">94 792 835</string>
    <string name="store_moda_vinci_fb">/ModaVinci.Tunisie</string>
    <string name="store_moda_vinci_web">https://moda-vinci.com/</string>
    <string name="store_ecovillage">Ecovillage</string>
    <string name="store_ecovillage_des">Fruit de la collaboration de passionnés d’aromathérapie et d’agriculture, inspirée d’une nature d’une richesse insoupçonnable, la marque ne cesse depuis plus de 4 ans de vous offrir une gamme de cosmétique naturelle, alliant efficacité, accessibilité et plaisir des sens. A partir des matières premières naturelles sélectionnées avec soin, provenant de nos propres plantations ou de partenaires locaux, Ecovillage Natural Beauty vous présente un large choix de produits allant du soin de visage, au soin corps, à l’emblématique savon noir, aux parfums d’ambiance et ancestrales eaux de linge.</string>
    <string name="store_ecovillage_phone">29 766 961</string>
    <string name="store_ecovillage_fb">/www.ecovillage.com.tn/</string>
    <string name="store_ecovillage_web">www.ecovillage.com.tn</string>
    <string name="store_hmila">H\'mila</string>
    <string name="store_hmila_des">Hamila stoneware manufacture Tunisienne de produits d’art de la table et de décoration en grès émaillé, la seule de son genre sur tout le continent africain.</string>
    <string name="store_hmila_phone">29 666 718</string>
    <string name="store_hmila_fb">/HamilaStoneware</string>
    <string name="store_hmila_web">www.hamilastore.com </string>
    <string name="store_hummel">Hummel</string>
    <string name="store_hummel_des">Hummel, fondée en 1923, est une marque de sportswear et de chaussures de sport profondément ancrée dans le football et le handball.</string>
    <string name="store_hummel_phone" />
    <string name="store_hummel_fb">/hummeltn/</string>
    <string name="store_hummel_web">www.hummel.tn</string>
    <string name="store_pretty_women">Pretty Woman</string>
    <string name="store_pretty_women_des">L’art de la parfumerie PRETTY WOMAN  s’évertue à offrir un lieu inspirant et aspirant aux femmes pour les accompagner à trouver le chemin de leur propre beauté et se sentir exceptionnelles le temps d’un moment. La maîtrise de nos marques et de leur philosophie nous installe comme narrateurs d’un luxe de connaisseurs.</string>
    <string name="store_pretty_women_phone">71 983 315</string>
    <string name="store_pretty_women_fb">/Pretty.Woman.Parfumeries</string>
    <string name="store_pretty_women_web">www.pw-beauty.com</string>
    <string name="store_lile_aux_bijoux">L\'ile Aux Bijoux</string>
    <string name="store_lile_aux_bijoux_des">L\'élégance, la finesse, la classe, la qualité, le charme, le grand choix, les bons prix… Bijoux en Argent Platiné 925.L\'île aux Bijoux - Just SILVER 925: ARE ALWAYS GOOD IDEA !!</string>
    <string name="store_lile_aux_bijoux_phone" />
    <string name="store_lile_aux_bijoux_fb" />
    <string name="store_lile_aux_bijoux_web" />
    <string name="store_women_secret">Women Secret</string>
    <string name="store_women_secret_des">Women\'secret  est une marque de sous-vêtements, vêtements de nuit, accessoires et maillots de bain pour la femme d\'aujourd\'hui. Nous créons de nouvelles idées pour rendre la vie plus facile et plus heureuse, provoquant parfois des émotions et parfois apportant des solutions. Nous sommes spécialistes de l\'univers féminin, une marque créée par et pour les femmes .</string>
    <string name="store_women_secret_phone">29 988 507</string>
    <string name="store_women_secret_fb">/WomenSecretTN</string>
    <string name="store_women_secret_web">www.womensecret.com </string>
    <string name="store_fatales">Fatales</string>
    <string name="store_fatales_web">https://www.fatales.tn/</string>
    <string name="store_fatales_fb">/fatales.tunisie</string>
    <string name="store_samsung">Samsung</string>
</resources>