<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/big_extra"
    android:layout_margin="@dimen/epsilon"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="0dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/item_icon"
            android:layout_width="@dimen/giant"
            android:layout_height="match_parent"
            android:contentDescription="@string/azur_city"
            android:scaleType="centerCrop"
            android:src="@drawable/pic_inside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/item_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/store_samsung"
            android:textAlignment="center"
            android:maxLines="2"
            android:gravity="center"
            android:textSize="@dimen/text_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/item_icon"
            app:layout_constraintRight_toLeftOf="@id/item_fav"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/item_fav"
            android:layout_width="@dimen/large"
            android:contentDescription="@string/favorite"
            android:layout_height="@dimen/large"
            android:layout_marginHorizontal="@dimen/tiny"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_fav_on"
            app:layout_constraintBottom_toBottomOf="@id/item_name"
            app:layout_constraintLeft_toRightOf="@id/item_name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/item_name"
            app:tint="@color/red" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

