<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/fragment_landing_pic"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:contentDescription="@string/picture"
        android:scaleType="centerCrop"
        android:src="@drawable/pic_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/fragment_azur"
        android:contentDescription="@string/azur_city"
        android:src="@drawable/ic_azur"
        android:padding="8dp"
        android:layout_marginVertical="16dp"
        android:elevation="4dp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/fragment_landing_pic"
        app:layout_constraintBottom_toTopOf="@id/fragment_landing_service_1"
        />

    <LinearLayout
        android:id="@+id/fragment_landing_service_1"
        app:layout_constraintTop_toBottomOf="@id/fragment_azur"
        app:layout_constraintBottom_toTopOf="@id/activity_landing_service_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|bottom"
        android:layout_marginTop="24dp"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_your_center_button"
            android:layout_margin="4dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="15dp"
            android:foreground="?android:attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:src="@drawable/ic_elements"
                    android:contentDescription="@string/your_center"
                    android:layout_width="50dp"
                    android:layout_height="50dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:minLines="2"
                    android:text="@string/your_center"
                    android:textAlignment="center"
                    android:gravity="center"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_shops_button"
            android:layout_margin="4dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="15dp"
            android:foreground="?android:attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:src="@drawable/ic_store"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/shops" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:minLines="2"
                    android:maxLines="2"
                    android:text="@string/shops"
                    android:gravity="center"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_geant_button"
            android:layout_margin="4dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="15dp"
            android:foreground="?android:attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:src="@drawable/ic_info_outline"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/geant" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:minLines="2"
                    android:maxLines="2"
                    android:text="@string/geant"
                    android:gravity="center"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/activity_landing_service_2"
        app:layout_constraintTop_toBottomOf="@id/fragment_landing_service_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center|top"

        >

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_restaurant_button"
            android:layout_margin="4dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="15dp"
            android:foreground="?android:attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:src="@drawable/ic_restaurant"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/restaurant" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:minLines="2"
                    android:maxLines="2"
                    android:text="@string/restaurant"
                    android:gravity="center"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_leisure_button"
            android:layout_margin="4dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="15dp"
            android:foreground="?android:attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:src="@drawable/ic_play_outline"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/leisure" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:minLines="2"
                    android:maxLines="2"
                    android:text="@string/leisure"
                    android:gravity="center"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/fragment_service_button"
            android:layout_margin="4dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="15dp"
            android:foreground="?android:attr/selectableItemBackground"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:src="@drawable/ic_service"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/services" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:minLines="2"
                    android:maxLines="2"
                    android:text="@string/services"
                    android:gravity="center"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>